--- a/index.html
+++ b/index.html
@@ -362,11 +362,10 @@
 					<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         				
-        					<!--<p>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script>
- Developed by <a href="http://www.wymo.sg" target="_blank">Wymo</a> Template By
- <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-</p>-->
+        					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+								Developed by <a href="http://www.wymo.sg" target="_blank">Wymo</a> Template By
+								<i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+								</p>
         				</aside>
         			</div>
         		</div>
